fixed a problem in IRI input with GUISDAP matlab files. Automatic scaling of some plot axes. A bug fix to appendix B in the manual

--- a/doc/ElSpec-manual.tex
+++ b/doc/ElSpec-manual.tex
@@ -758,8 +758,8 @@ The ELSPEC output files contain a MATLAB structure \verb|ElSpecOut|. The structu
 \item[FAC] Field-aligned current carried by the precipitating electrons $\mathrm{[Am^{-2}]}$
 \item[FACstd] Standard deviation of FAC $\mathrm{[Am^{-2}]}$
 \item[Eflux] Differential energy flux $\mathrm{[eV(eVm^2s)^{-1}]}$
-\item[Pe] Differential energy flux (for backward compatibility) $\mathrm{[eV(eVm^2s)^{-1}]}$
-\item[PeStd] Standard deviation of differential energy flux $\mathrm{[eV(eVm^2s)^{-1}]}$
+\item[Pe] Auroral power (integral energy flux) $\mathrm{[Wm^{-2}]}$
+\item[PeStd] Standard deviation of auroral power $\mathrm{[Wm^{-2}]}$
 \item[E0] Peak energy (the energy where Eflux reaches its maximum) [eV]
 \item[q] Ion production rate $\mathrm{m^{-3}s^{-1}}$
 \item[E] Energy bin boundaries [eV]
